# Axiom-Engine

./: .gitignore  README.md  REFERENCE_REPOS.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  agent.py  language.py  multi_agent.py  reasoning.py  world_model.py
examples/: simple.yaml
infrastructure/: __init__.py  orchestrator.py  queue.py  storage.py  worker.py
optimization/: __init__.py  meta_learning.py  rsi.py
science/: __init__.py  analyzer.py  experiment.py  hypothesis.py  knowledge_graph.py
src/: __init__.py
src/codegen/: bpy_codegen.py
src/compiler/: __init__.py  compiler.py
src/ir/: __init__.py  constraint_dsl.py  graph.py  ir.py
src/planner/: planner.py
src/runtime/: executor.py
src/schema/: __init__.py  scene_spec.py
src/solver/: __init__.py  solver.py
src/utils/: errors.py  loader.py
tests/: test_axiom_engine.py  test_basic.py  test_constraints.py  test_cycles.py  test_dsl.py  test_graph.py  test_vertical_slice.py
utils/: __init__.py  config.py  logging.py  metrics.py
