[project]
name = "blender-scene-compiler"
version = "0.1.0"
description = "Declarative scene compiler targeting Blender"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "numpy>=1.26,<3",
  "torch>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
